# rust-openrouter-mcp

./: .gitignore  CONNECT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md
.github/workflows/: release-mcpb.yml
assets/: hero.manifest.json  logo-v2.manifest.json  logo.manifest.json
bundle/: manifest.json
mcpb/: .mcpbignore  make-icon.mjs  manifest.json
scripts/: build-mcpb.mjs  build-mcpb.sh
src/: audio_gen.rs  chat_gen.rs  image_gen.rs  image_io.rs  main.rs  manifest.rs  openrouter.rs  pricing.rs  server.rs  stats.rs  tasks.rs  video_gen.rs
src/cli/: commands.rs  mod.rs  table.rs
src/image_gen/: job.rs  mod.rs  tests.rs
src/openrouter/: mod.rs
src/openrouter/client/: chat.rs  key.rs  mod.rs  models.rs  speech.rs  video.rs
src/openrouter/dto/: chat.rs  key.rs  mod.rs  models.rs  speech.rs  video.rs
src/server/: account.rs  audio.rs  caps.rs  chat.rs  image.rs  mod.rs  models.rs  naming.rs  result.rs  schema.rs  test_support.rs  video.rs
src/video_gen/: job.rs  mod.rs
