[package]
name = "openrouter-mcp"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "MCP stdio server for OpenRouter chat, image, and video generation"
repository = "https://github.com/nbubelich/openrouter-mcp"
readme = "README.md"
keywords = ["mcp", "openrouter", "llm", "image-generation", "video"]
categories = ["api-bindings", "command-line-utilities"]
include = ["Cargo.toml", "Cargo.lock", "LICENSE", "README.md", "src/**"]

[[bin]]
name = "openrouter-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
