[package]
name = "openrouter-mcp"
version = "0.2.13"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
description = "MCP stdio server and CLI for OpenRouter: model discovery, image generation/editing, and image description"
authors = ["Nick Bubelich <n+github@bubelich.com>"]
repository = "https://github.com/thesimj/rust-openrouter-mcp"
homepage = "https://github.com/thesimj/rust-openrouter-mcp"
readme = "README.md"
keywords = ["mcp", "openrouter", "cli", "image-generation", "vision"]
categories = ["api-bindings", "command-line-utilities", "multimedia::images"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "src/**",
]

[[bin]]
name = "openrouter-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
# Rasterizes SVG inputs to PNG before sending (re-exports usvg + tiny-skia).
# Pure Rust, no system libraries. usvg pins the effective MSRV to 1.87.
resvg = { version = "0.47", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
# Test-only HTTP mock server for exercising the OpenRouter client and MCP tool
# without hitting the live API. Not shipped to users (dev-dependencies are
# excluded from `cargo install` and the published crate).
wiremock = "0.6"

[profile.release]
opt-level = "z"      # optimize for size
debug = false        # no DWARF debug info (this is the cargo default; explicit here)
strip = "symbols"    # also drop the symbol table -> smaller binary, no debug/symbol info
lto = "thin"         # cross-crate inlining + dead-code elimination across all crates
codegen-units = 1    # whole-program optimization (slower compile, smaller output)
panic = "abort"      # drop unwinding tables/landing pads (release aborts on panic)
